--- a/README
+++ b/README
@@ -1,20 +1,8 @@
 ///////////////////////////////////////////////////////
 //////////// ticket Coopserp General
 ////////////////Con usuarios/////////////////////
-///////////////////////////////////////////////////////
+////////////09082021////////////////////////////////////////////
 
-////////////09082021
-Creado y editado por Sebastian Guevara Sanchez
-Informacion de contacto:
-sebasguesa@hotmail.com
-sebastrabajo96@gmail.com
-+57 3145302542
-https://github.com/guevaraStian
-
-
-////////////Referencias
-http://github.com/amnersaucedososa
-https://facturacionweb.site/blog/sistema-de-tickets-y-soporte-con-php-y-mysql/
 
 En total son 8 carpetas donde lib es de librerias, images de imagnes, 
 css de los estilos, config de la conexion a la base de datos, archivos
@@ -56,3 +44,39 @@ Reportar caida de canal
 Reimprimir recibo de caja
 Modificar timbre o GGG
 Consulta
+
+
+
+
+-----------------------------
+---------------------------
+
+
+
+JAVASCRIPT
+
+
+
+
+Los pasos para poner en ejecución son los siguientes Ir a la pagina web de JavaScript y descargarlo para tu sistema operativo, escoger la versión LTS y tambien escoger la opción "add path" con el fin de poder ejecutar comandos de Python en la terminal de comandos
+```Pagina web
+https://nodejs.org
+```
+Luego de descargar el ejecutable, dar click en el .msi y dar click en la opción siguiente
+
+Verifica la instalación:
+
+Abrir la terminal de comandos (Presiona Windows + R, escribe cmd y presiona Enter).
+```Terminal de comandos
+node -v
+npm -v
+```
+
+Luego descargamos el repositorio, ingresamos a la carpeta descargada y ejecutamos cualquiera de los siguiente comando
+```Terminal de comandos
+node main.js
+nodemon main.js
+npm start
+```
+
+
