--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ///////////////////////////////////////////////////////
-//////////// ticket Coopserp General
+//////////// Ticket de servicios
 ////////////////Con usuarios/////////////////////
 ////////////09082021////////////////////////////////////////////
 
@@ -19,7 +19,7 @@ roles si se van a ampliar a mas roles con mas caracteristicas.
 
 
 ////////////////////////////////
--- TIPIFICACION DE PROBLEMAS --
+TIPIFICACION DE PROBLEMAS
 ////////////////////////////////
 Problemas con la biometria
 Problemas con el computador
